--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     <main id="home">
         <h1 id="title">David Söderbom</h1>
         <div class="container-main">
+            
             <img class="left" src="img/animation/left.png">
             <img class="middle" src="img/animation/middle.png">
-            <img class="right" src="img/animation/right.png">
+            <img class="right" src="img/animation/right.png">   
 
 
         </div>
@@ -60,14 +61,40 @@
 
         <div class="card-wrapper">
             <div id="card1">
-                <div class="img-wrapper"><img src="img/CoverArt/cominghome.png"></div>
+                <div class="img-wrapper" id="left"><img src="img/CoverArt/cominghome.png"></div>
+
                 <h2>Coming Home</h2>
+                <div class="card-wrapper-down">
+                    <button class="card-button-left">View Details</button>
+                </div>
+
+                <div class="hidden-info-card-left">
+                    <p>The very first official song released by David Söderbom</p>
+                    <h4>Released: 3 April 2019</h4>
+                    <h4>Produced By: David Söderbom and featuring Ryan Field</h4>
+                    <!-- <a href="https://open.spotify.com/album/59Ew8xgPa8J0KONeqRv9aX" target="_blank"><button class="spotify-button">View on Spotify</button></a> -->
+                </div>
             </div>
+
+
             <div id="card2">
-                <div class="img-wrapper"><img src="img/CoverArt/imnottheone.png"></div>
+                <div class="img-wrapper" id="right"><img src="img/CoverArt/imnottheone.png"></div>
                 <h2>I'm Not The One</h2>
+
+                <div class="card-wrapper-down">
+                    <button class="card-button-right">View Details</button>
+                </div>
+
+                <div class="hidden-info-card-right">
+                    <p>The follow-up of Coming Home</p>
+                    <h4>Released: 22 April 2019</h4>
+                    <h4>Produced By: David Söderbom</h4>
+                    <!-- <a href="https://open.spotify.com/album/59Ew8xgPa8J0KONeqRv9aX" target="_blank"><button class="spotify-button">View on Spotify</button></a> -->
+
+                </div>
             </div>
         </div>
+
 
         <img class="side-deco-left" src="img/animation/left.png">
         <img class="side-deco-right" src="img/animation/right.png">
@@ -78,6 +105,17 @@
 <!--===========ABOUT SECTION============-->
     <section class="about-me" id="about">
         <h1>About Me</h1>
+
+        <div class="container-about">
+            <div class="text-box">
+                <h2>Who I Am...</h2>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean. ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venena</p>
+            </div>
+
+            <div class="profile">
+                <img src="img/profile.jpeg">
+            </div>
+        </div>
     </section>
 
 
