--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="sv">
   <head>
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="img/logo/icon.ico">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,8 +20,12 @@
   <body>
 
 
-<div class="loader">
-    <img src="img/loading.gif" alt="Loading...">
+<!-- <div class="loader">
+    <img src="img/animation/loading.gif" alt="Loading...">
+</div> -->
+
+<div class="loadingScreen">
+    <img src="img/logo/davidLogoWhite.png">
 </div>
 
 
@@ -39,10 +43,8 @@
         <li><a href="#music">My Music</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="exclusive.html">• EXCLUSIVES •</a></li>
+        <li><a href="exclusive.html">EXCLUSIVES</a></li>
       </ul>
-
-      <img src="img/logoDavidBlack.png">
     </div>
 
    
@@ -52,10 +54,12 @@
         <h1 id="title">David Söderbom</h1>
         <h3>- Music producer</h3>
         <div class="container-main">
+
+            <img id="logo" src="img/logo/davidLogoWhite.png">
             
-            <img class="left" src="img/animation/left2.png">
-            <img class="middle" src="img/animation/middle2.png">
-            <img class="right" src="img/animation/right2.png">   
+            <!-- <img class="left" src="img/animation/logoLeft.png">
+            <img class="middle" src="img/animation/LogoMiddle.png">
+            <img class="right" src="img/animation/logoRight.png"> --> 
 
 
         </div>
@@ -131,7 +135,7 @@
         </form> -->
         </div>
 
-        <img class="side-deco-left" src="img/animation/left.png">
+       
     </section>
 
 
@@ -170,7 +174,6 @@
             </form>
         </div>
 
-        <img class="side-deco-right" src="img/animation/right.png">
 
     </section>
 
