--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@
                     <h4>Produced By: David Söderbom</h4>
                 </div>
             </div>
-
-
         </div>
+
 
         <div class="play-music">
             <iframe class="spotify" src="https://open.spotify.com/embed/artist/05QumLL3Z0aJ5Mp7GMRZBe" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -127,12 +126,6 @@
         <h2>Access <i style="font-size: 24px;">Special Exclusives</i> right here and nowhere else</h2>
         <div class="container-form">
             <a class="exclusive-btn" href="exclusive.html"><button>EXCLUSIVES</button></a>
-        <!-- <form>
-            <input class="contact-form" type="text" name="name-signup" placeholder="Full name" required>
-            <input class="contact-form" type="text" name="email-signup" placeholder="Your email" required>
-            <input class="contact-form" type="text" name="password-signup" placeholder="Create password" required>
-            <a href="exclusive.html"><button name="submit">SIGN UP</button></a>
-        </form> -->
         </div>
 
        
@@ -152,7 +145,7 @@
 
             <div class="profile">
                 <img src="img/profile.jpg">
-                <h2 style="font-family: 'Nothing You Could Do', cursive; position: relative; bottom: 50px; left: 100px; color: #fff;">David Söderbom</h2>
+                <h2 class="sign">David Söderbom</h2>
             </div>
         </div>
     </section>
