--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div> -->
 
 <div class="loadingScreen">
-    <img src="img/logo/davidLogoWhite.png">
+    <img src="img/logo/davidLogoWhite.png" alt="Loading...">
 </div>
 
 
@@ -55,7 +55,7 @@
         <h3>- Music producer</h3>
         <div class="container-main">
 
-            <img id="logo" src="img/logo/davidLogoWhite.png">
+            <img id="logo" src="img/logo/davidLogoWhite.png" alt="image">
             
             <!-- <img class="left" src="img/animation/logoLeft.png">
             <img class="middle" src="img/animation/LogoMiddle.png">
@@ -69,7 +69,7 @@
         </div>
 
         <div class="front-page-img">
-            <img src="img/header.jpg">
+            <img src="img/header.jpg" alt="image">
         </div>
     </main>
 
@@ -86,7 +86,7 @@
         <div class="card-wrapper">
 
             <div id="card1">
-                <div class="img-wrapper" id="left"><img src="img/CoverArt/cominghome.png"></div>
+                <div class="img-wrapper" id="left"><img src="img/CoverArt/cominghome.png" alt="image"></div>
 
                 <h2>Coming Home</h2>
                 <div class="card-wrapper-down">
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="hidden-info-card-left">
-                    <h4>The very first official song released by David Söderbom</p>
+                    <h4>The very first official song released by David Söderbom</h4>
                     <h4>Released: 3 April 2019</h4>
                     <h4>Produced By: David Söderbom and featuring Ryan Field</h4>
                 </div>
@@ -102,7 +102,7 @@
 
 
             <div id="card2">
-                <div class="img-wrapper" id="right"><img src="img/CoverArt/backtoyou.png"></div>
+                <div class="img-wrapper" id="right"><img src="img/CoverArt/backtoyou.png" alt="image"></div>
                 <h2>Back To You</h2>
 
                 <div class="card-wrapper-down">
@@ -119,7 +119,7 @@
 
 
         <div class="play-music">
-            <iframe class="spotify" src="https://open.spotify.com/embed/artist/05QumLL3Z0aJ5Mp7GMRZBe" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe class="spotify" src="https://open.spotify.com/embed/artist/05QumLL3Z0aJ5Mp7GMRZBe" width="300" height="380" allow="encrypted-media"></iframe>
         </div>
 
         <h1 class="exclusives">Take Advantage!</h1>
@@ -144,7 +144,7 @@
             </div>
 
             <div class="profile">
-                <img src="img/profile.jpg">
+                <img src="img/profile.jpg" alt="image">
                 <h2 class="sign">David Söderbom</h2>
             </div>
         </div>
@@ -191,6 +191,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/lax.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
